# cloud-cost-tracker

./: .gitignore  README.md  pyproject.toml  run-cloud-cost-estimator.sh
.github/workflows/: CI.yml
scripts/: EXAMPLE.env  aws_requests.py  emails.py  main.py
