[project]
name = "aws-cost-tracker"
version = "1.0.0"
description = "A Python tool to track AWS costs daily and email a summary."
authors = [
    { name="Kevin Tierney", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "boto3",
    "yagmail",
    "python-dotenv",
    "matplotlib",
    "python-dotenv",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
]

[tool.setuptools]
packages = ["scripts"]
